New attempt at OS X packaging

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ deps =
 commands =
     py.test {posargs:kubernaut}
     pex --disable-cache -c kubernaut -o out/kubernaut "--python-shebang=/usr/bin/env python3" -r requirements.txt .
-    {envpython} dist/kubernaut --version
+    {envpython} out/kubernaut --version
 
 [testenv:linters]
 deps =
