ensure tox-travis is installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ before_install:
 
 install:
   - make virtualenv
+  - pip install tox-travis
 
 script:
   - export KUBERNAUT_VERSION=$(make version)
