make --help the test command rather than --version

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ deps =
 commands =
     py.test {posargs:kubernaut}
     pex --disable-cache -c kubernaut -o out/kubernaut "--python-shebang=/usr/bin/env python3" -r requirements.txt .
-    {envpython} out/kubernaut --version
+    {envpython} out/kubernaut --help
 
 [testenv:linters]
 deps =
