tell me where package_cloud is installed so I can use a full path

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ matrix:
 before_install:
   - gem install package_cloud
   - package_cloud version
+  - which package_cloud
 
   - pip install tox-travis homebrew-pypi-poet
   - python --version
