switch to wheelhouse builds

--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,8 @@ deps =
     -rdev-requirements.txt
 commands =
     py.test {posargs:kubernaut}
-    pex --disable-cache -c kubernaut -o out/kubernaut "--python-shebang=/usr/bin/env python3" -r requirements.txt .
-    {envpython} out/kubernaut --help
+    ./wheelhouse_build.sh
+    {envpython} dist/kubernaut --help
 
 [testenv:linters]
 deps =
