--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ deps =
 commands =
     py.test {posargs:kubernaut}
     ./wheelhouse_build.sh
-    {envpython} dist/kubernaut --help
+    {envpython} out/kubernaut --help
 
 [testenv:linters]
 deps =
