Try a Travis fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
 
 script:
   - export KUBERNAUT_VERSION=$(make version)
-  - make build
+  - tox -e $(echo py$TRAVIS_PYTHON_VERSION | tr -d .)
   - virtualenv/bin/pip install .
   - rm -f ~/.config/kubernaut/config.json
   - virtualenv/bin/kubernaut --version
