--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
-envlist = py3, flake8
+envlist = py27, py3, flake8
 skipsdist = true
 usedevelop = true
 
 [travis]
 python =
+    2.7: py27
     3.4: py3
     3.5: py3, linters
     3.6: py3
@@ -19,6 +20,17 @@ commands =
     py.test {posargs:kubernaut}
     ./wheelhouse_build.sh
     {envpython} out/kubernaut --help
+
+[testenv:py27]
+passenv = SCOUT_DISABLE
+deps =
+    pex>=1.2.9
+    pytest
+    -rdev-requirements.txt
+    .
+commands =
+    py.test {posargs:kubernaut}
+    kubernaut --help
 
 [testenv:linters]
 deps =
