--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 ---
 language: python
 
-os:
-  - linux
-  - osx
-
 matrix:
   include:
     - os: linux
@@ -23,24 +19,10 @@ services:
 before_install:
   - |
     if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-        brew update
-        # Per the `pyenv homebrew recommendations <https://github.com/yyuu/pyenv/wiki#suggested-build-environment>`_.
-        brew install openssl readline
-        # See https://docs.travis-ci.com/user/osx-ci-environment/#A-note-on-upgrading-packages.
-        # I didn't do this above because it works and I'm lazy.
-        brew outdated pyenv || brew upgrade pyenv
-        # virtualenv doesn't work without pyenv knowledge. venv in Python 3.3
-        # doesn't provide Pip by default. So, use `pyenv-virtualenv <https://github.com/yyuu/pyenv-virtualenv/blob/master/README.md>`_.
-        brew install pyenv-virtualenv
-        pyenv install $PYTHON
-        # I would expect something like ``pyenv init; pyenv local $PYTHON`` or
-        # ``pyenv shell $PYTHON`` would work, but ``pyenv init`` doesn't seem to
-        # modify the Bash environment. ??? So, I hand-set the variables instead.
-        export PYENV_VERSION=$PYTHON
-        export PATH="/Users/travis/.pyenv/shims:${PATH}"
-        pyenv-virtualenv venv
-        source venv/bin/activate
-      fi
+      brew install python3;
+      virtualenv venv -p python3;
+      source venv/bin/activate
+    fi
   - python --version
 
 install:
