--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 ---
-language: python
-
 matrix:
   include:
     - os: linux
+      language: python
+      python:
+        - 3.6
       sudo: false
     - os: osx
       language: generic
