--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ services:
 before_install:
   - |
     if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-      brew install python3;
+      pip3 install virtualenv
       virtualenv venv -p python3;
       source venv/bin/activate
     fi
