I always forget curl downloads to stdout by default...

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_install:
   - python --version
 
 install:
-  - curl https://storage.googleapis.com/pub/gsutil.tar.gz
+  - curl -OL https://storage.googleapis.com/pub/gsutil.tar.gz
   - tar xfz gsutil.tar.gz -C $HOME
   - export PATH=${PATH}:$HOME/gsutil
   - pip install pipenv
