--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,18 @@ before_install:
   - python --version
 
 install:
-  - pip install pipenv gsutil google-cloud
+  - gcloud version || true
+  - |
+    if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then
+      rm -rf $HOME/google-cloud-sdk;
+      export CLOUDSDK_CORE_DISABLE_PROMPTS=1;
+      curl https://sdk.cloud.google.com | bash;
+    fi
+  - source /home/travis/google-cloud-sdk/path.bash.inc
+  - pip install pipenv
   - make init
   - gsutil --version
+  - gcloud --version
 
 script:
   - make binary
