--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,19 @@ matrix:
 env:
   global:
     - SCOUT_DISABLE=1
+    - GCLOUD_KEYFILE=datawireio-cloud-ff47e83d3663.json
 
 services:
   - docker
 
 before_install:
+  - |
+    openssl aes-256-cbc \
+      -K $encrypted_be4a8a531a51_key \
+      -iv $encrypted_be4a8a531a51_iv \
+      -in ${GCLOUD_KEYFILE}.enc \
+      -out ${GCLOUD_KEYFILE} \
+      -d
   - |
     if [ "$TRAVIS_OS_NAME" == "osx" ]; then
       pip3 install virtualenv
@@ -34,11 +42,11 @@ install:
       export CLOUDSDK_CORE_DISABLE_PROMPTS=1;
       curl https://sdk.cloud.google.com | bash;
     fi
-  - source /home/travis/google-cloud-sdk/path.bash.inc
+  - source $HOME/google-cloud-sdk/path.bash.inc
   - pip install pipenv
   - make init
-  - gsutil --version
   - gcloud --version
+  - gcloud auth activate-service-account --key-file ${GCLOUD_KEYFILE}
 
 script:
   - make binary
