dont cleanup the git repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ script:
 deploy:
   - provider: script
     script: make publish
+    skip_cleanup: true
     on:
       branch: master2
 #  - provider: script
