--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ install:
   - gcloud auth activate-service-account --key-file ${GCLOUD_KEYFILE}
 
 script:
-  - make binary
+  - make binary smoketest
 
 deploy:
   - provider: script
@@ -57,7 +57,3 @@ deploy:
     skip_cleanup: true
     on:
       branch: master2
-#  - provider: script
-#    script: make publish
-#    on:
-#      tags: true
