--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 click = "*"
 requests = "*"
-"e1839a8" = {path = ".", editable = true}
+"e1839a8" = {editable = true, path = "."}
 kubernaut = {editable = true, path = "."}
 "ruamel.yaml" = "*"
 colorama = "*"
