--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ matrix:
         - 3.6
       sudo: false
     - os: osx
+      osx_image: xcode6.4
       language: generic
       env: PYTHON=3.6.5
 
