--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_install:
       -d
   - |
     if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-      pip3 install virtualenv
+      pip install virtualenv
       virtualenv venv -p python3;
       source venv/bin/activate
     fi
