--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ before_install:
       -d
   - |
     if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-      brew install python3
-      pip3 install virtualenv
+      brew upgrade python
+      pip install virtualenv
       virtualenv venv -p python3;
       source venv/bin/activate
     fi
